--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install:
  #- pip install -r requirements.txt --use-mirrors
    # Install whatever version of Django that's listed above
    # Travis is currently working on
- - pip install -q Django==$DJANGO_VERSION --use-mirrors
+ - pip install -q Django==$DJANGO_VERSION 
 # Tell Travis how to run the test script itself
 script: python runtests.py
 sudo: false
