--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,10 @@ install:
    # Travis is currently working on
  - pip install https://pypi.python.org/packages/source/d/django-sendfile/django-sendfile-0.3.7.tar.gz
    #-q mock==1.0.1 Django==$DJANGO_VERSION coverage coveralls
- - pip install -q mock==1.0.1 Django==$DJANGO_VERSION coverage coveralls
- 
+ - pip install -q mock==1.0.1 Django==$DJANGO_VERSION #coverage coveralls
+ - pip install coveralls
 # Tell Travis how to run the test script itself
-script: python runtests.py
+script: coverage run python runtests.py
 sudo: false
 after_success:
   - coveralls
