--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ install:
  - pip install coveralls
 # Tell Travis how to run the test script itself
 script: coverage run runtests.py
+ - python  runtests.py
 sudo: false
 after_success:
   - coveralls
